WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193954
[LFC][BFC] Do not ignore next sibling box while laying out BFC.
https://bugs.webkit.org/show_bug.cgi?id=193954
Summary
[LFC][BFC] Do not ignore next sibling box while laying out BFC.
alan
Reported
2019-01-28 21:39:56 PST
ssia
Attachments
Patch
(7.09 KB, patch)
2019-01-28 21:44 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2019-01-28 21:44:14 PST
Created
attachment 360438
[details]
Patch
Antti Koivisto
Comment 2
2019-01-29 02:46:14 PST
Comment on
attachment 360438
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=360438&action=review
> Source/WebCore/layout/blockformatting/BlockFormattingContext.cpp:158 > + auto computeInFlowPositionedPosition = [&]() {
Unneeded ()
WebKit Commit Bot
Comment 3
2019-01-29 06:55:22 PST
Comment on
attachment 360438
[details]
Patch Clearing flags on attachment: 360438 Committed
r240654
: <
https://trac.webkit.org/changeset/240654
>
WebKit Commit Bot
Comment 4
2019-01-29 06:55:24 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-01-29 06:56:26 PST
<
rdar://problem/47631344
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug