[LFC][BFC] Do not ignore next sibling box while laying out BFC. https://bugs.webkit.org/show_bug.cgi?id=193954

Reviewed by Antti Koivisto.

Source/WebCore:

When a block box has no child (<img style="display: block">), we should not ignore the next sibling (move the container check to the function to keep layout logic simple)
Also inFlowNonReplacedWidthAndMargin() is called through inFlowReplacedWidthAndMargin() to compute margins.

* layout/blockformatting/BlockFormattingContext.cpp:
(WebCore::Layout::BlockFormattingContext::layout const):
(WebCore::Layout::BlockFormattingContext::placeInFlowPositionedChildren const):
* layout/blockformatting/BlockFormattingContext.h:
* layout/blockformatting/BlockFormattingContextGeometry.cpp:
(WebCore::Layout::BlockFormattingContext::Geometry::inFlowNonReplacedWidthAndMargin):

Tools:

* LayoutReloaded/misc/LFC-passing-tests.txt:


Canonical link: https://commits.webkit.org/208452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240654 268f45cc-cd09-0410-ab3c-d52691b4dbfc